--- a/src/LongManager/MainWindow.xaml
+++ b/src/LongManager/MainWindow.xaml
@@ -2,22 +2,26 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:local="clr-namespace:LongManager" mc:Ignorable="d" 
-        Title="祥龙物流管理系统" Height="450" Width="800"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}" TextElement.FontWeight="Regular" 
-        TextElement.FontSize="13" TextOptions.TextFormattingMode="Ideal"
+        Title="物流管理系统" Height="450" Width="800"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal" 
         TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource MaterialDesignPaper}"
-        FontFamily="{DynamicResource MaterialDesignFont}">
-    <DockPanel  HorizontalAlignment="Left" Height="auto" LastChildFill="False" Margin="0,0,0,0" VerticalAlignment="Top" Width="auto">
-        <TreeView x:Name="MenuTree" MinWidth="220"  >
-            <TreeViewItem Header="系统功能" IsExpanded="True">
-                <TreeViewItem Header="物流设置"/>
-            </TreeViewItem>
-            <TreeViewItem Header="系统设置" IsExpanded="True">
-                <TreeViewItem Header="日志记录" />
-            </TreeViewItem>
-        </TreeView>
-        <Frame x:Name="frame" Content="Frame" Height="180" VerticalAlignment="Top" Width="320" />
+        FontFamily="{StaticResource MaterialDesignFont}" Icon="favicon.ico">
+    <DockPanel  LastChildFill="True" Margin="0">
+        <DockPanel DockPanel.Dock="Top" Width="auto" Height="50" Background="#FF673AB7">
+            <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}">物流管理系统</TextBlock>
+        </DockPanel>
+        <DockPanel DockPanel.Dock="Bottom" Width="auto" Height="50" Background="#FF673AA0"></DockPanel>
+        <StackPanel DockPanel.Dock="Left" Width="200" Height="auto" Background="#FF9459C5">
+            <Button Margin="10" Width="auto" Height="30" Content="导航一"></Button>
+            <Button Margin="10" Width="auto" Height="30" Content="导航一"></Button>
+            <Button Margin="10" Width="auto" Height="30" Content="导航一"></Button>
+        </StackPanel>
+        <DockPanel DockPanel.Dock="Right" Width="auto" Height="auto">
+            <Frame Content="Page"></Frame>
+        </DockPanel>
     </DockPanel>
 </Window>
