--- a/src/LongManager/MainWindow.xaml
+++ b/src/LongManager/MainWindow.xaml
@@ -1,5 +1,6 @@
 ﻿<Window x:Class="LongManager.MainWindow" 
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:local="clr-namespace:LongManager" mc:Ignorable="d" 
         Title="物流管理系统" Height="450" Width="800"
@@ -9,7 +10,8 @@
         TextOptions.TextFormattingMode="Ideal" 
         TextOptions.TextRenderingMode="Auto"
         Background="{DynamicResource MaterialDesignPaper}"
-        FontFamily="{StaticResource MaterialDesignFont}" Icon="favicon.ico">
+        FontFamily="{StaticResource MaterialDesignFont}"
+        Icon="favicon.ico">
     <DockPanel  LastChildFill="True" Margin="0">
         <DockPanel DockPanel.Dock="Top" Width="auto" Height="50" Background="#FF673AB7">
             <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}">物流管理系统</TextBlock>
