--- a/src/LongManager/Pages/UserList.xaml
+++ b/src/LongManager/Pages/UserList.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="LongManager.Pages.UserList"
+﻿<local:BasePage x:Class="LongManager.Pages.UserList"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,7 +8,6 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="UserList" 
-      x:Name="User"
       Loaded="UserList_Loaded">
     <Grid Margin="10">
         <Grid.RowDefinitions>
@@ -43,4 +42,4 @@
             <Button Content="上一页"></Button>
         </WrapPanel>
     </Grid>
-</Page>
+</local:BasePage>
