--- a/src/LongManager/Pages/LogList.xaml
+++ b/src/LongManager/Pages/LogList.xaml
@@ -9,17 +9,11 @@
       Title="LogList">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="50" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Grid HorizontalAlignment="Center" VerticalAlignment="Top" Margin="16">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <StackPanel Grid.Column="1" Margin="24 0 0 0" VerticalAlignment="Center">
-                <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap">日志管理</TextBlock>
-            </StackPanel>
-        </Grid>
+        <StackPanel Grid.Row="0" Margin="24 0 0 0" VerticalAlignment="Center">
+            <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap">日志管理</TextBlock>
+        </StackPanel>
     </Grid>
 </Page>
