--- a/src/LongManager/Pages/Welcome.xaml
+++ b/src/LongManager/Pages/Welcome.xaml
@@ -4,22 +4,20 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:LongManager.Pages"
+      xmlns:wpf="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Welcome">
+      Title="Welcome" Loaded="Page_Loaded">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="50" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Grid HorizontalAlignment="Center" VerticalAlignment="Top" Margin="16">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <StackPanel Grid.Column="1" Margin="24 0 0 0" VerticalAlignment="Center">
-                <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap">欢迎使用</TextBlock>
-            </StackPanel>
-        </Grid>
+        <StackPanel Grid.Row="0" Margin="24 0 0 0" VerticalAlignment="Center">
+            <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap">欢迎使用</TextBlock>
+        </StackPanel>
+        <DockPanel Grid.Row="1">
+            <wpf:ChromiumWebBrowser Grid.Column="1" x:Name="Browser"></wpf:ChromiumWebBrowser>
+        </DockPanel>
     </Grid>
 </local:BasePage>
