--- a/src/LongManager/MainWindow.xaml
+++ b/src/LongManager/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:local="clr-namespace:LongManager" mc:Ignorable="d" 
         xmlns:pages="clr-namespace:LongManager.Pages"
+        xmlns:controls="clr-namespace:LongManager.Controls"
         Title="管理系统" Height="450" Width="800"
         TextElement.Foreground="White"
         TextElement.FontWeight="Regular"
@@ -25,10 +26,11 @@
             </WrapPanel>
         </DockPanel>
         <StackPanel DockPanel.Dock="Left" Width="200" Height="auto" Background="#FF9459C5">
-            <Button x:Name="FrameUserBtn" Margin="10" Width="auto" Height="30" Content="用户管理" Click="FrameUserBtn_Click" ></Button>
-            <Button x:Name="CarBtn" Margin="10" Width="auto" Height="30" Content="车辆管理" Click="CarBtn_Click"></Button>
-            <Button x:Name="LogBtn" Margin="10" Width="auto" Height="30" Content="日志管理" Click="LogBtn_Click"></Button>
-            <Button x:Name="SystemBtn" Margin="10" Width="auto" Height="30" Content="系统设置" Click="SystemBtn_Click"></Button>
+            <Button x:Name="WelcomeBtn" Margin="10" Width="auto" Height="30" Content="预览" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="Welcome"></Button>
+            <Button x:Name="FrameUserBtn" Margin="10" Width="auto" Height="30" Content="用户管理" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="UserList" ></Button>
+            <Button x:Name="CarBtn" Margin="10" Width="auto" Height="30" Content="车辆管理" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="CarList"></Button>
+            <Button x:Name="LogBtn" Margin="10" Width="auto" Height="30" Content="日志管理" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="LogList"></Button>
+            <Button x:Name="SystemBtn" Margin="10" Width="auto" Height="30" Content="系统设置" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="SystemConfig"></Button>
         </StackPanel>
         <DockPanel DockPanel.Dock="Right" Width="auto" Height="auto">
             <Frame x:Name="PageFrame" NavigationUIVisibility="Hidden"></Frame>
