--- a/src/LongManager/MainWindow.xaml
+++ b/src/LongManager/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:LongManager" mc:Ignorable="d" 
         xmlns:pages="clr-namespace:LongManager.Pages"
         xmlns:controls="clr-namespace:LongManager.Controls"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         Title="管理系统" Height="450" Width="800"
         TextElement.Foreground="White"
         TextElement.FontWeight="Regular"
@@ -28,7 +29,7 @@
         </DockPanel>
         <StackPanel DockPanel.Dock="Left" Width="200" Height="auto" Background="#FF9459C5">
             <Button x:Name="WelcomeBtn" Margin="10" Width="auto" Height="30" Content="预览" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="Welcome"></Button>
-            <Button x:Name="FrameUserBtn" Margin="10" Width="auto" Height="30" Content="用户管理" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="UserList" ></Button>
+            <Button x:Name="FrameUserBtn" Margin="10" Width="auto" Height="30" Content="用户管理" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="UserList"></Button>
             <Button x:Name="CarBtn" Margin="10" Width="auto" Height="30" Content="车辆管理" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="CarList"></Button>
             <Button x:Name="LogBtn" Margin="10" Width="auto" Height="30" Content="日志管理" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="LogList"></Button>
             <Button x:Name="SystemBtn" Margin="10" Width="auto" Height="30" Content="系统设置" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="SystemConfig"></Button>
