--- a/src/LongManager/Pages/Login.xaml
+++ b/src/LongManager/Pages/Login.xaml
@@ -25,7 +25,7 @@
             <PasswordBox x:Name="TxtPassword" Margin="20 0 0 0" Width="200" />
         </WrapPanel>
         <WrapPanel Grid.Row="2" Margin="50 0 0 0">
-            <Button x:Name="InBtn" Margin="50 0 0 0" Content="登录" Click="InBtn_Click"></Button>
+            <Button x:Name="InBtn" Margin="50 0 0 0" Content="登录" Click="InBtn_Click" IsDefault="True"></Button>
             <Button x:Name="OutBtn" Margin="50 0 0 0" Content="退出" Click="OutBtn_Click"></Button>
         </WrapPanel>
     </Grid>
