--- a/src/LongManager/Pages/UserEdit.xaml
+++ b/src/LongManager/Pages/UserEdit.xaml
@@ -1,14 +1,13 @@
-﻿<local:BasePage x:Class="LongManager.Pages.UserEdit"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:LongManager.Pages"
-      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="UserEdit" Loaded="UserEdit_Loaded">
-    <Grid Margin="10">
+﻿<local:BaseWindow x:Class="LongManager.Pages.UserEdit"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:LongManager.Pages"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        mc:Ignorable="d"
+        Title="修改用户" Height="450" Width="800" Loaded="UserEdit_Loaded">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
@@ -39,4 +38,4 @@
             <Button x:Name="SaveBtn" Content="保存" Click="SaveBtn_Click"></Button>
         </StackPanel>
     </Grid>
-</local:BasePage>
+</local:BaseWindow>
