--- a/src/LongManager/Pages/CarList.xaml
+++ b/src/LongManager/Pages/CarList.xaml
@@ -1,19 +1,44 @@
-﻿<Page x:Class="LongManager.Pages.CarList"
+﻿<local:BasePage x:Class="LongManager.Pages.CarList"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:LongManager.Pages"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="CarList">
-    <Grid>
+    <Grid Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="50" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0" Margin="24 0 0 0" VerticalAlignment="Center">
-            <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap">车辆管理</TextBlock>
-        </StackPanel>
+        <WrapPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left">
+
+        </WrapPanel>
+        <DataGrid x:Name="CarDataGrid" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Top"  AutoGenerateColumns="False"
+                   CanUserAddRows="False" CanUserDeleteRows="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding UserName}" Header="登录名"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding DisplayName}" Header="用户名称"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Birthday}" Header="出生日期"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Mobile}" Header="手机号码"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Address}" Header="常用地址"></DataGridTextColumn>
+                <DataGridTemplateColumn Header="修改">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <Button x:Name="EditBtn" Tag="{Binding RowGuid}" Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}"
+                                    ToolTip="修改" Click="EditBtn_Click" >
+                                <materialDesign:PackIcon Kind="Edit" Height="24" Width="24"/>
+                            </Button>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+        <WrapPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Left">
+            
+        </WrapPanel>
     </Grid>
-</Page>
+</local:BasePage>
