--- a/src/LongManager/Pages/Config/SystemConfig.xaml
+++ b/src/LongManager/Pages/Config/SystemConfig.xaml
@@ -1,9 +1,10 @@
-﻿<Page x:Class="LongManager.Pages.SystemConfig"
+﻿<LongPages:BasePage x:Class="LongManager.Pages.Config.SystemConfig"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:LongManager.Pages"
+      xmlns:LongPages="clr-namespace:LongManager.Pages"
+      xmlns:local="clr-namespace:LongManager.Pages.Config"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="SystemConfig">
@@ -16,4 +17,4 @@
             <TextBlock Style="{StaticResource MaterialDesignDisplay1TextBlock}" TextWrapping="Wrap">系统设置</TextBlock>
         </StackPanel>
     </Grid>
-</Page>
+</LongPages:BasePage>
