--- a/src/LongManager/Pages/Label/LabelList.xaml
+++ b/src/LongManager/Pages/Label/LabelList.xaml
@@ -1,9 +1,10 @@
-﻿<Page x:Class="LongManager.Pages.LabelList"
+﻿<LongPages:BasePage x:Class="LongManager.Pages.Label.LabelList"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:LongManager.Pages"
+      xmlns:LongPages="clr-namespace:LongManager.Pages"
+      xmlns:local="clr-namespace:LongManager.Pages.Label"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="LabelList">
@@ -11,4 +12,4 @@
     <Grid>
         
     </Grid>
-</Page>
+</LongPages:BasePage>
