--- a/src/LongManager/Pages/User/UserList.xaml
+++ b/src/LongManager/Pages/User/UserList.xaml
@@ -1,13 +1,15 @@
-﻿<local:BasePage x:Class="LongManager.Pages.CarList"
+﻿<LongPages:BasePage x:Class="LongManager.Pages.User.UserList"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:LongManager.Pages"
+      xmlns:LongPages="clr-namespace:LongManager.Pages"
+      xmlns:local="clr-namespace:LongManager.Pages.User"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="CarList">
+      Title="UserList" 
+      Loaded="UserList_Loaded">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"></RowDefinition>
@@ -15,9 +17,10 @@
             <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
         <WrapPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left">
-
+            <TextBox x:Name="TxtUserName" materialDesign:HintAssist.Hint="用户名称" Width="200" Margin="10"></TextBox>
+            <Button x:Name="SearchBtn" Content="搜索" Click="SearchBtn_Click"></Button>
         </WrapPanel>
-        <DataGrid x:Name="CarDataGrid" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Top"  AutoGenerateColumns="False"
+        <DataGrid x:Name="UserDataGrid" Grid.Row="1" HorizontalAlignment="Stretch" IsReadOnly="True" AutoGenerateColumns="False"
                    CanUserAddRows="False" CanUserDeleteRows="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding UserName}" Header="登录名"></DataGridTextColumn>
@@ -29,7 +32,7 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button x:Name="EditBtn" Tag="{Binding RowGuid}" Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}"
-                                    ToolTip="修改" Click="EditBtn_Click" >
+                                    ToolTip="修改" Click="EditBtn_Click">
                                 <materialDesign:PackIcon Kind="Edit" Height="24" Width="24"/>
                             </Button>
                         </DataTemplate>
@@ -38,7 +41,7 @@
             </DataGrid.Columns>
         </DataGrid>
         <WrapPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Left">
-            
+            <Button Content="上一页"></Button>
         </WrapPanel>
     </Grid>
-</local:BasePage>
+</LongPages:BasePage>
