--- a/src/LongManager/Pages/Label/LabelList.xaml
+++ b/src/LongManager/Pages/Label/LabelList.xaml
@@ -5,11 +5,23 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:LongPages="clr-namespace:LongManager.Pages"
       xmlns:local="clr-namespace:LongManager.Pages.Label"
+      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="LabelList">
-
-    <Grid>
-        
+      Title="LabelList" Loaded="LabelList_Loaded">
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
+        </Grid.RowDefinitions>
+        <WrapPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left"></WrapPanel>
+        <DataGrid x:Name="LabelDataGrid" Grid.Row="1" HorizontalAlignment="Stretch" IsReadOnly="True" AutoGenerateColumns="False"
+                   CanUserAddRows="False" CanUserDeleteRows="False">
+            <DataGrid.Columns>
+                <DataGridTextColumn Binding="{Binding LabelNO}" Header="标签编号"></DataGridTextColumn>
+            </DataGrid.Columns>
+        </DataGrid>
+        <WrapPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Left"></WrapPanel>
     </Grid>
 </LongPages:BasePage>
