统一页面的Loaded命名方式

--- a/src/LongManager/Pages/Car/CarEdit.xaml
+++ b/src/LongManager/Pages/Car/CarEdit.xaml
@@ -8,7 +8,7 @@
         xmlns:local="clr-namespace:LongManager.Pages.Car"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="车辆信息" Height="450" Width="800" Loaded="CarEdit_Loaded">
+        Title="车辆信息" Height="450" Width="800" Loaded="BaseWindow_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"></RowDefinition>
