--- a/src/LongManager/Pages/Config/SystemConfig.xaml
+++ b/src/LongManager/Pages/Config/SystemConfig.xaml
@@ -7,7 +7,7 @@
       xmlns:local="clr-namespace:LongManager.Pages.Config"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="SystemConfig">
+      Title="SystemConfig" Loaded="BasePage_Loaded">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
