--- a/src/LongManager/Pages/Label/LabelList.xaml
+++ b/src/LongManager/Pages/Label/LabelList.xaml
@@ -8,7 +8,7 @@
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="LabelList" Loaded="LabelList_Loaded">
+      Title="LabelList" Loaded="BasePage_Loaded">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"></RowDefinition>
