--- a/src/LongManager/Pages/User/UserList.xaml
+++ b/src/LongManager/Pages/User/UserList.xaml
@@ -9,7 +9,7 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="UserList" 
-      Loaded="UserList_Loaded">
+      Loaded="BasePage_Loaded">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"></RowDefinition>
