新一代寄递业务信息平台的邮件地址信息爬虫

--- a/src/LongManager/MainWindow.xaml
+++ b/src/LongManager/MainWindow.xaml
@@ -35,6 +35,7 @@
             <Button x:Name="FrameUserBtn" Margin="10" Width="auto" Height="30" Content="用户管理" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="UserList"></Button>
             <Button x:Name="CarBtn" Margin="10" Width="auto" Height="30" Content="车辆管理" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="CarList"></Button>
             <Button x:Name="LabelBtn" Margin="10" Width="auto" Height="30" Content="标签管理" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="LabelList"></Button>
+            <Button x:Name="EMSBtn" Margin="10" Width="auto" Height="30" Content="EMS查询" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="EMSSearch"></Button>
             <Button x:Name="LogBtn" Margin="10" Width="auto" Height="30" Content="日志管理" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="LogList"></Button>
             <Button x:Name="SystemBtn" Margin="10" Width="auto" Height="30" Content="系统设置" Command="controls:LongManagerCommands.CustomCommand" CommandParameter="SystemConfig"></Button>
         </StackPanel>
