--- a/src/LongManager/Pages/Car/CarEdit.xaml
+++ b/src/LongManager/Pages/Car/CarEdit.xaml
@@ -24,7 +24,7 @@
                 <ComboBox x:Name="LabelCBox" Width="300" materialDesign:HintAssist.Hint="选择关联标签" IsEditable="True" materialDesign:HintAssist.HintOpacity=".26"></ComboBox>
             </WrapPanel>
             <WrapPanel Margin="10">
-                <TextBlock Text="收到指令后延时时间：" Width="200"></TextBlock>
+                <TextBlock Text="收到指令后延时时间（秒）：" Width="200"></TextBlock>
                 <ComboBox x:Name="DelayTime" Width="300" materialDesign:HintAssist.Hint="选择指令执行延迟时间" IsEditable="True" materialDesign:HintAssist.HintOpacity=".26">
                     <ComboBoxItem IsSelected="True" >1</ComboBoxItem>
                     <ComboBoxItem>5</ComboBoxItem>
@@ -32,7 +32,7 @@
                 </ComboBox>
             </WrapPanel>
             <WrapPanel Margin="10">
-                <TextBlock Text="电机动作延时时间：" Width="200"></TextBlock>
+                <TextBlock Text="电机动作延时时间（秒）：" Width="200"></TextBlock>
                 <ComboBox x:Name="ActionTime" Width="300" materialDesign:HintAssist.Hint="选择电机执行延迟时间" IsEditable="True" materialDesign:HintAssist.HintOpacity=".26">
                     <ComboBoxItem IsSelected="True">1</ComboBoxItem>
                     <ComboBoxItem>5</ComboBoxItem>
