--- a/src/LongManager/Pages/User/UserList.xaml
+++ b/src/LongManager/Pages/User/UserList.xaml
@@ -6,6 +6,7 @@
       xmlns:LongPages="clr-namespace:LongManager.Pages"
       xmlns:local="clr-namespace:LongManager.Pages.User"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      xmlns:controls="clr-namespace:LongManager.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="UserList" 
@@ -41,7 +42,7 @@
             </DataGrid.Columns>
         </DataGrid>
         <WrapPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Left">
-            <Button Content="上一页"></Button>
+            <controls:LongPager x:Name="Pager"></controls:LongPager>
         </WrapPanel>
     </Grid>
 </LongPages:BasePage>
