--- a/src/LongManager/Pages/EMS/EMSList.xaml
+++ b/src/LongManager/Pages/EMS/EMSList.xaml
@@ -1,30 +1,36 @@
-﻿<LongPages:BasePage x:Class="LongManager.Pages.Label.LabelList"
+﻿<pages:BasePage
+      x:Class="LongManager.Pages.EMS.EMSList"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:LongPages="clr-namespace:LongManager.Pages"
-      xmlns:local="clr-namespace:LongManager.Pages.Label"
+      xmlns:pages="clr-namespace:LongManager.Pages"
+      xmlns:local="clr-namespace:LongManager.Pages.EMS"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       xmlns:controls="clr-namespace:LongManager.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="LabelList" Loaded="BasePage_Loaded">
+      Title="EMSList" 
+      Loaded="BasePage_Loaded">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="50"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
             <RowDefinition Height="50"></RowDefinition>
         </Grid.RowDefinitions>
-        <WrapPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left"></WrapPanel>
-        <DataGrid x:Name="LabelDataGrid" Grid.Row="1" HorizontalAlignment="Stretch" IsReadOnly="True" AutoGenerateColumns="False"
+        <WrapPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Left">
+            <TextBox x:Name="TxtMailNO" materialDesign:HintAssist.Hint="邮件条码" Width="200" Margin="10"></TextBox>
+            <Button x:Name="SearchBtn" Content="搜索" Click="SearchBtn_Click"></Button>
+        </WrapPanel>
+        <DataGrid x:Name="MailDataGrid" Grid.Row="1" HorizontalAlignment="Stretch" IsReadOnly="True" AutoGenerateColumns="False"
                    CanUserAddRows="False" CanUserDeleteRows="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Binding="{Binding LabelNO}" Header="标签编号"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding MailNO}" Header="邮件条码"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Address}" Header="邮件地址"></DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
         <WrapPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Left">
             <controls:LongPager x:Name="Pager"></controls:LongPager>
         </WrapPanel>
     </Grid>
-</LongPages:BasePage>
+</pages:BasePage>
