增加菜单栏

--- a/src/LongManager/MainWindow.xaml
+++ b/src/LongManager/MainWindow.xaml
@@ -18,9 +18,12 @@
         Icon="Images/favicon.ico"
         Loaded="MainWindow_Loaded">
     <DockPanel  LastChildFill="True" Margin="0">
-        <DockPanel DockPanel.Dock="Top" Width="auto" Height="50" Background="#FF673AB7">
-            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Style="{StaticResource MaterialDesignDisplay1TextBlock}">管理系统</TextBlock>
-        </DockPanel>
+        <Menu DockPanel.Dock="Top" Width="auto" Height="40" Background="LightGray">
+            <MenuItem Header="文件">
+                <MenuItem Header="关于" Command="command:LongManagerCommands.MenuCommand" CommandParameter="About"></MenuItem>
+                <MenuItem Header="退出" Command="command:LongManagerCommands.Exit"/>
+            </MenuItem>
+        </Menu>
         <DockPanel DockPanel.Dock="Bottom" Width="auto" Height="40" Background="LightGray">
             <WrapPanel x:Name="SystemPanel" VerticalAlignment="Center">
                 <TextBlock Foreground="Black" Margin="20 0 0 0" x:Name="TxtDate"/>
@@ -31,14 +34,14 @@
             </WrapPanel>
         </DockPanel>
         <StackPanel DockPanel.Dock="Left" Width="200" Height="auto" Background="#FF9459C5">
-            <Button x:Name="WelcomeBtn" Margin="10" Width="auto" Height="30" Content="预览" Command="command:LongManagerCommands.CustomCommand" CommandParameter="Welcome"></Button>
-            <Button x:Name="FrameUserBtn" Margin="10" Width="auto" Height="30" Content="用户管理" Command="command:LongManagerCommands.CustomCommand" CommandParameter="UserList"></Button>
-            <Button x:Name="CarBtn" Margin="10" Width="auto" Height="30" Content="车辆管理" Command="command:LongManagerCommands.CustomCommand" CommandParameter="CarList"></Button>
-            <Button x:Name="LabelBtn" Margin="10" Width="auto" Height="30" Content="标签管理" Command="command:LongManagerCommands.CustomCommand" CommandParameter="LabelList"></Button>
-            <Button x:Name="EMSListBtn" Margin="10" Width="auto" Height="30" Content="EMS管理" Command="command:LongManagerCommands.CustomCommand" CommandParameter="EMSList"></Button>
-            <Button x:Name="EMSSearchBtn" Margin="10" Width="auto" Height="30" Content="EMS查询" Command="command:LongManagerCommands.CustomCommand" CommandParameter="EMSSearch"></Button>
-            <Button x:Name="LogBtn" Margin="10" Width="auto" Height="30" Content="日志管理" Command="command:LongManagerCommands.CustomCommand" CommandParameter="LogList"></Button>
-            <Button x:Name="SystemBtn" Margin="10" Width="auto" Height="30" Content="系统设置" Command="command:LongManagerCommands.CustomCommand" CommandParameter="SystemConfig"></Button>
+            <Button x:Name="WelcomeBtn" Margin="10" Width="auto" Height="30" Content="预览" Command="command:LongManagerCommands.OpenPageCommand" CommandParameter="Welcome"></Button>
+            <Button x:Name="FrameUserBtn" Margin="10" Width="auto" Height="30" Content="用户管理" Command="command:LongManagerCommands.OpenPageCommand" CommandParameter="UserList"></Button>
+            <Button x:Name="CarBtn" Margin="10" Width="auto" Height="30" Content="车辆管理" Command="command:LongManagerCommands.OpenPageCommand" CommandParameter="CarList"></Button>
+            <Button x:Name="LabelBtn" Margin="10" Width="auto" Height="30" Content="标签管理" Command="command:LongManagerCommands.OpenPageCommand" CommandParameter="LabelList"></Button>
+            <Button x:Name="EMSListBtn" Margin="10" Width="auto" Height="30" Content="EMS管理" Command="command:LongManagerCommands.OpenPageCommand" CommandParameter="EMSList"></Button>
+            <Button x:Name="EMSSearchBtn" Margin="10" Width="auto" Height="30" Content="EMS查询" Command="command:LongManagerCommands.OpenPageCommand" CommandParameter="EMSSearch"></Button>
+            <Button x:Name="LogBtn" Margin="10" Width="auto" Height="30" Content="日志管理" Command="command:LongManagerCommands.OpenPageCommand" CommandParameter="LogList"></Button>
+            <Button x:Name="SystemBtn" Margin="10" Width="auto" Height="30" Content="系统设置" Command="command:LongManagerCommands.OpenPageCommand" CommandParameter="SystemConfig"></Button>
         </StackPanel>
         <DockPanel DockPanel.Dock="Right" Width="auto" Height="auto">
             <Frame x:Name="PageFrame" NavigationUIVisibility="Hidden"></Frame>
