--- a/src/LongManager/Pages/Index/Index.xaml
+++ b/src/LongManager/Pages/Index/Index.xaml
@@ -10,7 +10,7 @@
     mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Index">
-    <Grid>
+    <Grid Background="Black">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
