--- a/src/LongManagerWeb/Pages/Shared/_Layout.cshtml
+++ b/src/LongManagerWeb/Pages/Shared/_Layout.cshtml
@@ -319,6 +319,18 @@
                     <li class="header">MAIN NAVIGATION</li>
                     <li class="active treeview">
                         <a href="#">
+                            <i class="fa fa-dashboard"></i> <span>首页</span>
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li class="active"><a href="index"><i class="fa fa-circle-o"></i>子页面1</a></li>
+                            <li><a href="#" ><i class="fa fa-circle-o"></i>子页面2</a></li>
+                        </ul>
+                    </li>
+                    <li class="treeview">
+                        <a href="#">
                             <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                             <span class="pull-right-container">
                                 <i class="fa fa-angle-left pull-right"></i>
