web端新增dataTable, client端信息baseJob

--- a/src/LongManagerWeb/Pages/Shared/_Layout.cshtml
+++ b/src/LongManagerWeb/Pages/Shared/_Layout.cshtml
@@ -325,8 +325,8 @@
                             </span>
                         </a>
                         <ul class="treeview-menu">
-                            <li class="active"><a href="index"><i class="fa fa-circle-o"></i>子页面1</a></li>
-                            <li><a href="#" ><i class="fa fa-circle-o"></i>子页面2</a></li>
+                            <li class="active"><a href="LoginHistory"><i class="fa fa-circle-o"></i>登录日志</a></li>
+                            <li><a href="#"><i class="fa fa-circle-o"></i>子页面2</a></li>
                         </ul>
                     </li>
                     <li class="treeview">
@@ -506,9 +506,7 @@
 
 
         <!-- Content Wrapper. Contains page content -->
-        <div class="content-wrapper">
-            @RenderBody()
-        </div>
+        @RenderBody()
         <!-- /.content -->
         <footer class="main-footer">
             <div class="pull-right hidden-xs">
