--- a/src/LongManagerClient/Pages/Car/CarEdit.xaml
+++ b/src/LongManagerClient/Pages/Car/CarEdit.xaml
@@ -26,7 +26,8 @@
             <WrapPanel Margin="10">
                 <TextBlock Text="收到指令后延时时间（秒）：" Width="200"></TextBlock>
                 <ComboBox x:Name="DelayTime" Width="300" materialDesign:HintAssist.Hint="选择指令执行延迟时间" IsEditable="True" materialDesign:HintAssist.HintOpacity=".26">
-                    <ComboBoxItem IsSelected="True" >1</ComboBoxItem>
+                    <ComboBoxItem IsSelected="True">0</ComboBoxItem>
+                    <ComboBoxItem>1</ComboBoxItem>
                     <ComboBoxItem>5</ComboBoxItem>
                     <ComboBoxItem>10</ComboBoxItem>
                 </ComboBox>
@@ -34,7 +35,8 @@
             <WrapPanel Margin="10">
                 <TextBlock Text="电机动作延时时间（秒）：" Width="200"></TextBlock>
                 <ComboBox x:Name="ActionTime" Width="300" materialDesign:HintAssist.Hint="选择电机执行延迟时间" IsEditable="True" materialDesign:HintAssist.HintOpacity=".26">
-                    <ComboBoxItem IsSelected="True">1</ComboBoxItem>
+                    <ComboBoxItem IsSelected="True">0</ComboBoxItem>
+                    <ComboBoxItem>1</ComboBoxItem>
                     <ComboBoxItem>5</ComboBoxItem>
                     <ComboBoxItem>10</ComboBoxItem>
                 </ComboBox>
